--- a/private_dot_config/helix/config.toml
+++ b/private_dot_config/helix/config.toml
@@ -36,7 +36,7 @@ ret = "goto_word"
 "A-K" = [ "extend_to_line_bounds", "yank", "paste_before" ]
 # Cycle buffers
 H = "goto_previous_buffer"
-J = "goto_next_buffer"
+L = "goto_next_buffer"
 
 [keys.select]
 # Basics
